Bugfix: 3670 [IE7/8, Chrome] Source Editor font size is too large

--- a/Website/Composite/content/misc/editors/codemirroreditor/codemirror.css
+++ b/Website/Composite/content/misc/editors/codemirroreditor/codemirror.css
@@ -8,6 +8,7 @@ html, body {
 
 .CodeMirror {
 	line-height: 16px;
+	font-size: 13px;
 	font-family: monospace;
 }
 
